# JKGLSL_Sample

./: settings.gradle
JkGLSL/: build.gradle
JkGLSL/src/main/: AndroidManifest.xml
JkGLSL/src/main/java/com/glsl_android/activity/: MainActivity.java
JkGLSL/src/main/java/com/glsl_android/ui/: PointsOrLines.java  SixPointedStar.java  (+1 more)
JkGLSL/src/main/res/layout/: activity_main.xml
JkGLSL/src/main/res/values/: strings.xml
app/: build.gradle
app/src/androidTest/java/com/glsl_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/glsl_android/: MainActivity.java
app/src/test/java/com/glsl_android/: ExampleUnitTest.java
glslutil/src/androidTest/java/com/glslutil/: ExampleInstrumentedTest.java
glslutil/src/main/: AndroidManifest.xml
glslutil/src/main/java/com/glslutil/: ShaderUtil.java
glslutil/src/main/res/values/: strings.xml
glslutil/src/test/java/com/glslutil/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
seegl/: build.gradle
seegl/src/androidTest/java/com/seegl/: ExampleInstrumentedTest.java
seegl/src/main/: AndroidManifest.xml
seegl/src/main/java/com/seegl/: MainActivity.java
seegl/src/main/jni/: CMakeLists.txt  GLNativeRenderer.cpp
seegl/src/main/jni/libOverDraw/: CMakeLists.txt
seegl/src/main/jni/libOverDraw/include/: GLPrimitiveView.h  GLView.h
seegl/src/main/jni/libOverDraw/src/: GLPrimitiveView.cpp  GLView.cpp
seegl/src/main/res/layout/: activity_main.xml
seegl/src/main/res/values/: strings.xml
seegl/src/test/java/com/seegl/: ExampleUnitTest.java
(+4 files in other folders)
